# Code-Checker-Webapps-Final

./: .gitignore  .replit  Conditions.py  GoogleSheetsConnection.py  README.md  added  code-checker-webapps-ad47b751bd5c.json  conditions.py  conditions.txt  main.py  output  pyproject.toml  replit.nix
files/S100/: main.cpp
files/S100 (2)/: main.cpp
static/: main.js  style.css
templates/: index.html
