[tool.poetry]
name = "repl-nix-code-checker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_code_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
google-auth = "^2.29.0"
google-api-python-client = "^2.127.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
