[tool.poetry]
name = "repl-nix-code-checker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_code_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
